--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,12 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import requests\n",
     "import gmaps\n",
+    "import requests\n",
+    "import time\n",
     "import os\n",
+    "import json\n",
+    "\n",
     "\n",
     "# Import API key\n",
     "from api_keys import g_key"
@@ -41,11 +44,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ostrovnoy</td>\n",
+       "      <td>2</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1558378754</td>\n",
+       "      <td>72</td>\n",
+       "      <td>68.05</td>\n",
+       "      <td>39.51</td>\n",
+       "      <td>37.50</td>\n",
+       "      <td>7.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>mahebourg</td>\n",
+       "      <td>75</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>1558378503</td>\n",
+       "      <td>74</td>\n",
+       "      <td>-20.41</td>\n",
+       "      <td>57.70</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>11.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>qaanaaq</td>\n",
+       "      <td>25</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>1558378755</td>\n",
+       "      <td>73</td>\n",
+       "      <td>77.48</td>\n",
+       "      <td>-69.36</td>\n",
+       "      <td>22.20</td>\n",
+       "      <td>2.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>zhuhai</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>1558378755</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40.71</td>\n",
+       "      <td>112.04</td>\n",
+       "      <td>44.60</td>\n",
+       "      <td>4.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>cape town</td>\n",
+       "      <td>20</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1558378755</td>\n",
+       "      <td>76</td>\n",
+       "      <td>-33.93</td>\n",
+       "      <td>18.42</td>\n",
+       "      <td>55.99</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>543</td>\n",
+       "      <td>yabrud</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SY</td>\n",
+       "      <td>1558378840</td>\n",
+       "      <td>32</td>\n",
+       "      <td>33.97</td>\n",
+       "      <td>36.66</td>\n",
+       "      <td>80.60</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>544</td>\n",
+       "      <td>paraiso</td>\n",
+       "      <td>5</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>1558378898</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24.01</td>\n",
+       "      <td>-104.61</td>\n",
+       "      <td>84.20</td>\n",
+       "      <td>16.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>545</th>\n",
+       "      <td>545</td>\n",
+       "      <td>veraval</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>1558378898</td>\n",
+       "      <td>62</td>\n",
+       "      <td>49.65</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>61.00</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>546</th>\n",
+       "      <td>546</td>\n",
+       "      <td>novyy urgal</td>\n",
+       "      <td>100</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1558378899</td>\n",
+       "      <td>93</td>\n",
+       "      <td>51.07</td>\n",
+       "      <td>132.56</td>\n",
+       "      <td>49.74</td>\n",
+       "      <td>2.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547</th>\n",
+       "      <td>547</td>\n",
+       "      <td>tongren</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>1558378899</td>\n",
+       "      <td>64</td>\n",
+       "      <td>27.72</td>\n",
+       "      <td>109.18</td>\n",
+       "      <td>55.86</td>\n",
+       "      <td>2.84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>548 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     City_ID         City  Cloudiness Country        Date  Humidity    Lat  \\\n",
+       "0          0    ostrovnoy           2      RU  1558378754        72  68.05   \n",
+       "1          1    mahebourg          75      MU  1558378503        74 -20.41   \n",
+       "2          2      qaanaaq          25      GL  1558378755        73  77.48   \n",
+       "3          3       zhuhai           0      CN  1558378755        39  40.71   \n",
+       "4          4    cape town          20      ZA  1558378755        76 -33.93   \n",
+       "..       ...          ...         ...     ...         ...       ...    ...   \n",
+       "543      543       yabrud           0      SY  1558378840        32  33.97   \n",
+       "544      544      paraiso           5      MX  1558378898         4  24.01   \n",
+       "545      545      veraval           0      FR  1558378898        62  49.65   \n",
+       "546      546  novyy urgal         100      RU  1558378899        93  51.07   \n",
+       "547      547      tongren           4      CN  1558378899        64  27.72   \n",
+       "\n",
+       "        Lng  Max Temp  Wind Speed  \n",
+       "0     39.51     37.50        7.16  \n",
+       "1     57.70     78.80       11.41  \n",
+       "2    -69.36     22.20        2.37  \n",
+       "3    112.04     44.60        4.47  \n",
+       "4     18.42     55.99        8.05  \n",
+       "..      ...       ...         ...  \n",
+       "543   36.66     80.60        8.05  \n",
+       "544 -104.61     84.20       16.11  \n",
+       "545    0.71     61.00        8.05  \n",
+       "546  132.56     49.74        2.68  \n",
+       "547  109.18     55.86        2.84  \n",
+       "\n",
+       "[548 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "cities_data = pd.read_csv(\"../output_data/cities.csv\")\n",
+    "cities_data"
    ]
   },
   {
@@ -60,10 +281,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Configure gmaps\n",
+    "gmaps.configure(g_key)\n",
+    "\n",
+    "# Store latitude and longitude in locations\n",
+    "locations = cities_data[[\"Lat\", \"Lng\"]]\n",
+    "\n",
+    "# Store Humidity in humidity\n",
+    "humidity = cities_data[\"Humidity\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abecc8d96e67435d9aca88e09619daf0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Plot Heatmap\n",
+    "fig = gmaps.figure(center=(0, 0), zoom_level=2)\n",
+    "intensity = np.max(humidity)\n",
+    "\n",
+    "# Create heat layer\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights = humidity, dissipating=False, max_intensity=100, point_radius=3)\n",
+    "\n",
+    "# Add layer\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "# Display figure\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "code",
@@ -83,10 +348,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>70</td>\n",
+       "      <td>ponta do sol</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1558378767</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-20.63</td>\n",
+       "      <td>-46.00</td>\n",
+       "      <td>73.68</td>\n",
+       "      <td>5.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>88</td>\n",
+       "      <td>cidreira</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1558378770</td>\n",
+       "      <td>66</td>\n",
+       "      <td>-30.17</td>\n",
+       "      <td>-50.22</td>\n",
+       "      <td>76.56</td>\n",
+       "      <td>5.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>138</td>\n",
+       "      <td>morondava</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>1558378780</td>\n",
+       "      <td>69</td>\n",
+       "      <td>-20.30</td>\n",
+       "      <td>44.28</td>\n",
+       "      <td>79.08</td>\n",
+       "      <td>9.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>139</td>\n",
+       "      <td>vaini</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>1558378780</td>\n",
+       "      <td>88</td>\n",
+       "      <td>15.34</td>\n",
+       "      <td>74.49</td>\n",
+       "      <td>78.90</td>\n",
+       "      <td>1.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>176</td>\n",
+       "      <td>nador</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>1558378499</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35.17</td>\n",
+       "      <td>-2.93</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>6.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>297</td>\n",
+       "      <td>mogok</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>1558378844</td>\n",
+       "      <td>51</td>\n",
+       "      <td>22.92</td>\n",
+       "      <td>96.51</td>\n",
+       "      <td>72.24</td>\n",
+       "      <td>2.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>444</td>\n",
+       "      <td>birjand</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>1558378880</td>\n",
+       "      <td>26</td>\n",
+       "      <td>32.86</td>\n",
+       "      <td>59.22</td>\n",
+       "      <td>71.60</td>\n",
+       "      <td>9.17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     City_ID          City  Cloudiness Country        Date  Humidity    Lat  \\\n",
+       "70        70  ponta do sol           0      BR  1558378767        57 -20.63   \n",
+       "88        88      cidreira           0      BR  1558378770        66 -30.17   \n",
+       "138      138     morondava           0      MG  1558378780        69 -20.30   \n",
+       "139      139         vaini           0      IN  1558378780        88  15.34   \n",
+       "176      176         nador           0      MA  1558378499        40  35.17   \n",
+       "297      297         mogok           0      MM  1558378844        51  22.92   \n",
+       "444      444       birjand           0      IR  1558378880        26  32.86   \n",
+       "\n",
+       "       Lng  Max Temp  Wind Speed  \n",
+       "70  -46.00     73.68        5.32  \n",
+       "88  -50.22     76.56        5.50  \n",
+       "138  44.28     79.08        9.06  \n",
+       "139  74.49     78.90        1.59  \n",
+       "176  -2.93     75.20        6.93  \n",
+       "297  96.51     72.24        2.77  \n",
+       "444  59.22     71.60        9.17  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "narrow_cities = cities_data.loc[(cities_data[\"Wind Speed\"] <= 10) & (cities_data[\"Cloudiness\"] == 0) & \n",
+    "                                   (cities_data[\"Max Temp\"] >= 70) & (cities_data[\"Max Temp\"] <= 80)].dropna()\n",
+    "\n",
+    "narrow_cities"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +527,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>ponta do sol</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-20.63</td>\n",
+       "      <td>-46.00</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>cidreira</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>-30.17</td>\n",
+       "      <td>-50.22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>morondava</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>-20.30</td>\n",
+       "      <td>44.28</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>vaini</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>15.34</td>\n",
+       "      <td>74.49</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>nador</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>35.17</td>\n",
+       "      <td>-2.93</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>mogok</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>22.92</td>\n",
+       "      <td>96.51</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>birjand</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>32.86</td>\n",
+       "      <td>59.22</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City Country    Lat    Lng Hotel Name\n",
+       "70   ponta do sol      BR -20.63 -46.00           \n",
+       "88       cidreira      BR -30.17 -50.22           \n",
+       "138     morondava      MG -20.30  44.28           \n",
+       "139         vaini      IN  15.34  74.49           \n",
+       "176         nador      MA  35.17  -2.93           \n",
+       "297         mogok      MM  22.92  96.51           \n",
+       "444       birjand      IR  32.86  59.22           "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#hotel_df\n",
+    "hotel_df = narrow_cities.loc[:,[\"City\",\"Country\", \"Lat\", \"Lng\"]]\n",
+    "hotel_df[\"Hotel Name\"] = \"\"\n",
+    "hotel_df"
+   ]
   },
   {
    "cell_type": "code",
@@ -117,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +693,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
